--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tabler/icons-react": "^3.31.0",
     "axios": "^1.7.9",
+    "clsx": "^2.1.1",
+    "cobe": "^0.6.3",
     "framer-motion": "^12.4.7",
+    "motion": "^12.4.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
-    "react-router": "^7.1.2"
+    "react-router": "^7.1.2",
+    "tailwind-merge": "^3.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
