--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,8 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router": "^7.1.2",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "tailwind-merge": "^3.0.2"
   },
   "devDependencies": {
